--- a/index.html
+++ b/index.html
@@ -1,7 +1,40 @@
 <!DOCTYPE html>
-<html>
-	<body>
-	<h1> Hello World </h1>
-	<p> test </p>
-	</body>	
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Home - HW2</title>
+    <link rel="stylesheet" href="01.css">
+  </head>
+  <body>
+
+    <div class="navbar">
+      <a href="index.html">Home</a>
+      <a href="fodder.html">Fodder For The Elder Gods</a>
+      <a href="apollyon.html">Apollyon of Blue Room</a>
+    </div>
+
+    <div id="box">
+    
+    <h1>Amatuer Game Development</h1>
+    
+    <section>
+      <h2><img src="https://cdn.discordapp.com/attachments/213028208801480715/613196950405120031/Guiwater.gif" alt="Alien looking at water"></h2>
+	       <p id="intro">
+		 Hi! My name is Molly Hutchinson! Sometimes I do some game dev on the sides. I'm still learning, but it's fun to start with a
+		 small idea and  watch it grow into something that you can play and test around on. Right now I'm working on two games,
+		 one is a Gameboy game called Apollyon of Blue Room (not the final name) and the other is a game developed in
+		 GameMaker Studio 2 and is called Fodder for the Elder Gods. I'm also in the process of planning another game,
+		 which is untitled as of right now.
+	       </p>
+      <p> Apollyon of Blue Room deals with feelings of isolation, anxiety, and depression along with not feeling like yourself anymore.</p>
+      <p> Fodder for the Elder Gods is a farming game along the lines of Stardew Valley and Harvest Moon but with a focus on
+	aliens and the unknown. You play as an alien that moved to the new planet to spite his family. </p>
+    </section>
+
+    <h6> ALL images provided are made by me or a couple of my friends that do some of the art for my games and my friends gave me permission to
+    share their work.</h6>
+
+    </div>
+  
 </html>
+
