--- a/index.html
+++ b/index.html
@@ -9,25 +9,23 @@
 
     <div class="navbar">
       <a href="index.html">Home</a>
-      <a href="fodder.html">Fodder For The Elder Gods</a>
-      <a href="apollyon.html">Apollyon of Blue Room</a>
+      <a href="fodder.html">Projects</a>
     </div>
 
     <div id="box">
     
-    <h1>Amatuer Game Development</h1>
+    <h1>Molly Hutchinson</h1>
     
     <section>
       <h2><img src="https://cdn.discordapp.com/attachments/213028208801480715/613196950405120031/Guiwater.gif" alt="Alien looking at water"></h2>
 	       <p id="intro">
-		 Hello! I'm currently working on my personal project video game project, Fodder for the Elder Gods. 
+		 Hello! I'm currently working on my personal video game project, Fodder for the Elder Gods. 
 	       </p>
-      <p>Intro 1</p>
-      <p>Intro 2</p>
+      <p>My main goals are to eventually complete my personal project and learn more about game development and software engineering. 
+	    I love watching my programming projects adapt and change as I work on them and I like seeing how they evolve as my own skills
+	    evolve alongside them.</p>
+      <p>I love to learn and am open to trying new things!</p>
     </section>
-
-    <h6> ALL images provided are made by me or a couple of my friends that do some of the art for my games and my friends gave me permission to
-    share their work.</h6>
 
     </div>
   
