--- a/fodder.html
+++ b/fodder.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>FFTEG - HW2</title>
+    <title>FFTEG</title>
     <link rel="stylesheet" href="01.css">
     <style>
 
@@ -19,7 +19,6 @@
     <div class="navbar">
       <a class="active" href="index.html">Home</a>
       <a href="fodder.html">Fodder For The Elder Gods</a>
-      <a href="apollyon.html">Apollyon of Blue Room</a>
     </div>
 
     <div id="box">
@@ -29,7 +28,7 @@
     <section>
       <h2><img src="https://cdn.discordapp.com/attachments/213028208801480715/596229348206313472/unknown.png" alt="Alien saying Howdy"></h2>
       <p>  Howdy! Fodder for the Elder Gods is a farming game more styled towards the classic Harvest Moon games with a couple of
-	improvements that were added in games such as Stardew Valley. You start as an alien (who yes, only has a mouth and no eyes) who is the
+	improvements that were added in games such as Stardew Valley. You start as an alien who is the
 	prince from an alien planet, but, being the younger prince and having little to no chance at an actual throne, gets tired of his life
 	and sees the news one day on TV. The news says that a new planet has been discovered that's great for farming, but the last people sent there
 	to start a colony mysteriously disappeared and they need new people to move there and start farming. Your player character, seeing chickens
