--- a/fodder.html
+++ b/fodder.html
@@ -10,6 +10,10 @@
 	  position: relative;
 	  width: 400px;
 	  height: 300px;
+	  display: block;
+ 	  margin-left: auto;
+  	  margin-right: auto;
+  	  <!width: 50%;>
       }
       
     </style>
