--- a/fodder.html
+++ b/fodder.html
@@ -8,12 +8,11 @@
 
       h2 > img {
 	  position: relative;
-	  width: 400px;
 	  height: 300px;
 	  display: block;
  	  margin-left: auto;
   	  margin-right: auto;
-  	  <!width: 50%;>
+  	  width: 50%;
       }
       
     </style>
