--- a/fodder.html
+++ b/fodder.html
@@ -42,7 +42,8 @@
 	else you'll all just become fodder for the elder gods. </p>
     </section>
     <section>
-      <img src="farmshot.png" alt="Picture of an alien at a farm">
+      <img src="farmshot.png" alt="Picture of an alien at a farm"
+	   style="width:50%;height:50%;>
       <h2>Gameplay</h2>
       <p> In this game, you'll meet a variety of townsfolk and you'll get to run a farm either with traditional crops or newly discovered alien crops
 	and animals. There will be things to collect, objectives and quests to complete, and people to befriend. There will also be special events,
