--- a/fodder.html
+++ b/fodder.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>FFTEG</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="01.css">
     <style>
 
@@ -21,7 +21,7 @@
 
     <div class="navbar">
       <a class="active" href="index.html">Home</a>
-      <a href="fodder.html">Fodder For The Elder Gods</a>
+      <a href="fodder.html">Projects</a>
     </div>
 
     <div id="box">
@@ -44,6 +44,7 @@
     <section>
       <img src="farmshot.png" alt="Picture of an alien at a farm"
 	   style="width:80%;height:80%">
+	    <p style="font-size:small">Playable demo coming very soon!</p>
       <h2>Gameplay</h2>
       <p> In this game, you'll meet a variety of townsfolk and you'll get to run a farm either with traditional crops or newly discovered alien crops
 	and animals. There will be things to collect, objectives and quests to complete, and people to befriend. There will also be special events,
@@ -85,10 +86,26 @@
 	</tr>
       </table>
       </section>
-
-      <h6> All images from me and my friend, Ali, who does art for our game!</h6>
+	    
+<section>
+      <h2><img src="Apollyon.png" alt="Picture of a game"></h2>
+	       <div id="apollyon"> Your name is Apollyon. You're not sure how you got here, but something makes you want to continue on. </div>
+	       <p>
+		 In Apollyon of Blue Room, you play as a small goat boy named Apollyon who finds himself unable to remember
+		 who he is, but has the faint memory of someone he once was and someone he once loved. Apollyon of Blue Room
+		 is a game made in GB Studio where you traverse vast puzzles while trying to piece together Apollyon's memories
+		 and figure out how and why he finds himself in a strange new world. The development for this game is on hold
+		 for right now as I wanted to shift more of my focus on Fodder for the Elder Gods while I had freetime.
+	       </p>
+    </section>
+    <section>
+      <h2> <img src="door.png" alt="Picture of a lit up door"></h2>
+      <p id="ital"> Are you sure you want to continue? </p>
+      
+      </section>
 
       </div>
 
+<h6> All images from me or my friend, Ali Harris, who does art for Fodder for the Elder Gods.</h6>
   
 </html>
