--- a/fodder.html
+++ b/fodder.html
@@ -99,7 +99,7 @@
 	       </p>
     </section>
     <section>
-      <h2> <img src="door.png" alt="Picture of a lit up door"></h2>
+      <img src="door.png" alt="Picture of a lit up door">
       <p id="ital"> Are you sure you want to continue? </p>
       
       </section>
