--- a/fodder.html
+++ b/fodder.html
@@ -88,6 +88,7 @@
       </section>
 	    
 <section>
+	<h1> Apollyon of Blue Room </h1>
       <h2><img src="Apollyon.png" alt="Picture of a game"></h2>
 	       <div id="apollyon"> Your name is Apollyon. You're not sure how you got here, but something makes you want to continue on. </div>
 	       <p>
