--- a/fodder.html
+++ b/fodder.html
@@ -100,7 +100,7 @@
 	       </p>
     </section>
     <section>
-      <img src="door.png" alt="Picture of a lit up door">
+      <img src="door.png" alt="Picture of a lit up door" style="width:400px">
       <p id="ital"> Are you sure you want to continue? </p>
       
       </section>
