--- a/fodder.html
+++ b/fodder.html
@@ -87,6 +87,8 @@
       </table>
       </section>
 	    
+	    <hr style="border-top: 3px dotted #bbb">
+	    
 <section>
 	<h1> Apollyon of Blue Room </h1>
       <h2><img src="Apollyon.png" alt="Picture of a game"></h2>
