--- a/fodder.html
+++ b/fodder.html
@@ -48,43 +48,7 @@
       <h2>Gameplay</h2>
       <p> In this game, you'll meet a variety of townsfolk and you'll get to run a farm either with traditional crops or newly discovered alien crops
 	and animals. There will be things to collect, objectives and quests to complete, and people to befriend. There will also be special events,
-	either traditional holidays or new, more cryptic holidays to match the cryptic alien planet setting. Here are just some of the characters you
-	will be able to meet: </p>
-      <table style="width: 75%">
-	<tr>
-	  <th></th>
-	  <th>Name</th>
-	  <th>Occupation</th>
-	  <th>Short Description</th>
-	</tr>
-	<tr>
-	  <td> <img src="beaic.png" alt="alien girl"> </td>
-	  <td> Bea </td>
-	  <td> Carpenter </td>
-	  <td> Bea is the town's overly excited and clueless carpenter. Not great at human interactions, but pretty good with her tools. </td>
-	</tr>
-	<tr>
-	  <td> <img src="percivalicon.png" alt="male alien"> </td>
-	  <td> Percival </td>
-	  <td> Innkeeper </td>
-	  <td> Not the most exciting person to be around, but gets his job done. Very serious, but kind at heart. </td>
-	</tr>
-	<tr>
-	  <td> <img src="APIicon.png" alt="Purple alien with one eye"> </td>
-	  <td> API </td>
-	  <td> Cooking Contest Judge / Prince </td>
-	  <td> The main character's sibling that just comes once a year to the planet to check on the main character and also judge the cooking
-	    contest. Got their fame from exploring the universe and vanquishing evil, but now rests comfortably at their home planet with their friend,
-	    Pepperoni. </td>
-	</tr>
-	<tr>
-	  <td> <img src="Pepicon.png" alt="Small cat boy"> </td>
-	  <td> Pepperoni </td>
-	  <td> Cooking Contest Judge / Knight </td>
-	  <td> Explored the universe with API and is a brave knight from a weird little planet far away. He now stays on API and the main character's
-	    home planet with API and occasionally goes out on adventures with API still. </td>
-	</tr>
-      </table>
+	either traditional holidays or new, more cryptic holidays to match the cryptic alien planet setting. </p>
 	    <hr>
       </section>
 	    
